syntax = "proto3";
package tws.proto.job;

option java_package = "edu.iu.dsc.tws.proto.system.job";
option java_outer_classname = "JobAPI";

import "resource-scheduler.proto";

enum JobFormatType {
    SHUFFLE = 0;
    FIELDS = 1;
}

// defines the job parameters. This will define the required resources for the job,
// what type of a job this is (a basic container job, fully featured dataflow job etc)
message Config {
    message KeyValue {
        string key = 1;
        // Only one of the below are set
        string value = 2;
        bytes serialized_value = 3;
    }
    repeated KeyValue kvs = 1;
    map<string, bytes> config_byte_map = 2;
}

message Container {
    string class_name = 1;
}

message JobResources {
    tws.proto.resource.scheduler.ComputeResource container = 1;
    int32 no_of_containers = 2;
}

message JobFormat {
    JobFormatType type = 1;
    string job_file = 2;
}

// this is a basic job. it will only have a container
message Job {
    string job_name = 1;
    // the container to run
    Container container = 2;
    // the requested resourcces
    JobResources job_resources = 3;
    // the configurations specified
    Config config = 4;
    // how the job is layed out
    JobFormat job_format = 5;

}